hphp/test/slow/clsmeth-nocompat/abstr-meth-iface.php.expectf
Fatal error: Cannot call abstract method I::foo in %s/test/slow/clsmeth-nocompat/abstr-meth-iface.php on line 9
